--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ApiAuthAngular</title>
+  <title>SmartStead</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+<link href="styles.d0c780fa97bdbc3ecd4d.bundle.css" rel="stylesheet"/></head>
 <body>
-  <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+  <app-root></app-root>
+<script type="text/javascript" src="inline.db2b4d3f78620289f21f.bundle.js"></script><script type="text/javascript" src="polyfills.07685bca73161be59257.bundle.js"></script><script type="text/javascript" src="scripts.b9c572fc0cde7f9e95ad.bundle.js"></script><script type="text/javascript" src="vendor.226ec57c7eef67534bd0.bundle.js"></script><script type="text/javascript" src="main.9a88ed004e50cf8f06d3.bundle.js"></script></body>
 </html>
