latest insert from angular

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,21 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>SmartStead</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <meta charset="utf-8">
+    <title>SmartStead</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <!-- <script src="/assets/vendors/web-animations.min.js">
+    </script> -->
 <link href="styles.d0c780fa97bdbc3ecd4d.bundle.css" rel="stylesheet"/></head>
+
 <body>
-  <app-root></app-root>
-<script type="text/javascript" src="inline.db2b4d3f78620289f21f.bundle.js"></script><script type="text/javascript" src="polyfills.07685bca73161be59257.bundle.js"></script><script type="text/javascript" src="scripts.b9c572fc0cde7f9e95ad.bundle.js"></script><script type="text/javascript" src="vendor.226ec57c7eef67534bd0.bundle.js"></script><script type="text/javascript" src="main.9a88ed004e50cf8f06d3.bundle.js"></script></body>
+    <app-root></app-root>
+<script type="text/javascript" src="inline.014d3f0e15b1dbae96b9.bundle.js"></script><script type="text/javascript" src="polyfills.07685bca73161be59257.bundle.js"></script><script type="text/javascript" src="scripts.49fc34b4bf5e35120aa7.bundle.js"></script><script type="text/javascript" src="vendor.ebeaaa3d8688395ba07e.bundle.js"></script><script type="text/javascript" src="main.2d369ab6947ecf318d8f.bundle.js"></script></body>
+
 </html>
